feat: notification for stopping of the music

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
             </intent-filter>
         </activity>
         <receiver android:name=".AlarmReceiver"/>
+        <service android:name=".service.StopMusicService" />
     </application>
 
 </manifest>
