--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         </activity>
         <receiver android:name=".AlarmReceiver"/>
         <service android:name=".service.StopMusicService" />
+        <activity android:name=".SongSelectorActivity"/>
     </application>
 
 </manifest>
