--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,31 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.nikstep.alarm">
+    package="com.nikstep.alarm2">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
+        android:name=".android.AlarmApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
-                android:name=".AlarmActivity"
-                android:label="@string/app_name"
-                android:theme="@style/AppTheme.NoActionBar">
+            android:name="com.nikstep.alarm2.android.activity.MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".AlarmReceiver"/>
-        <service android:name=".service.StopMusicService" />
-        <activity android:name=".SongSelectorActivity"/>
+
+        <activity
+            android:name="com.nikstep.alarm2.android.activity.SongListActivity"
+            android:parentActivityName="com.nikstep.alarm2.android.activity.MainActivity" />
+        <activity
+            android:name="com.nikstep.alarm2.android.activity.AlarmActivity"
+            android:parentActivityName="com.nikstep.alarm2.android.activity.MainActivity" />
+
+        <receiver android:name="com.nikstep.alarm2.android.receiver.AlarmReceiver" />
+        <service android:name="com.nikstep.alarm2.android.service.StopMusicService" />
     </application>
 
 </manifest>
