--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         <activity
             android:name="com.nikstep.alarm2.android.activity.MainActivity"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,10 +27,20 @@
 
         <activity
             android:name="com.nikstep.alarm2.android.activity.SongListActivity"
-            android:parentActivityName="com.nikstep.alarm2.android.activity.MainActivity" />
+            android:parentActivityName="com.nikstep.alarm2.android.activity.MainActivity"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".android.activity.MainActivity" />
+        </activity>
         <activity
             android:name="com.nikstep.alarm2.android.activity.AlarmActivity"
-            android:parentActivityName="com.nikstep.alarm2.android.activity.MainActivity" />
+            android:parentActivityName="com.nikstep.alarm2.android.activity.MainActivity"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".android.activity.MainActivity" />
+        </activity>
 
         <receiver android:name="com.nikstep.alarm2.android.receiver.AlarmReceiver" />
         <service android:name="com.nikstep.alarm2.android.service.StopMusicService" />
