--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
 
         <receiver android:name="com.nikstep.alarm.android.receiver.AlarmReceiver" />
         <service android:name="com.nikstep.alarm.android.service.StopMusicService" />
+        <activity android:name=".android.activity.ActiveAlarmActivity" />
     </application>
 
 </manifest>
