--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,5 @@
+include ':spotify-auth-release'
+include ':spotify-app-remote'
+include ':spotify-app-remote'
 include ':app'
-rootProject.name='Alarm'
+rootProject.name = "ru.nikstep.alarm"
