--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,32 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext.kotlin_version = "1.3.72"
     repositories {
         google()
         jcenter()
-        
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath "com.android.tools.build:gradle:4.0.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+}
+
+ext {
+    retrofit_version = '2.9.0'
+    rxjava2_version = '2.2.19'
+    rxandroid_version = '2.1.1'
+    dagger2_version = '2.28.1'
+    support_version = '28.0.0'
 }
 
 allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven { url "https://jitpack.io" }
     }
 }
 
