--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,11 @@ dependencies {
     implementation "com.google.android.material:material:1.2.0"
 
     implementation project(':spotify-app-remote')
+
+    // room
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt "android.arch.persistence.room:compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
 }
