--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ ext {
     rxandroid_version = '2.1.1'
     dagger2_version = '2.28.1'
     support_version = '28.0.0'
+    room_version = "2.2.5"
 }
 
 allprojects {
