--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".ui.alarm.AlarmActivity"/>
         <receiver
                 android:name="ru.nikstep.alarm.service.AlarmReceiver"
                 android:permission="android.permission.RECEIVE_BOOT_COMPLETED"
