--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         </activity>
         <activity android:name=".ui.alarm.AlarmActivity"/>
         <receiver
-                android:name="ru.nikstep.alarm.service.AlarmReceiver"
+                android:name="ru.nikstep.alarm.service.android.AlarmReceiver"
                 android:permission="android.permission.RECEIVE_BOOT_COMPLETED"
                 android:enabled="true">
             <intent-filter>
