--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,7 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    viewBinding {
-        enabled = true
-    }
+    buildFeatures.viewBinding = true
 }
 
 dependencies {
@@ -46,7 +44,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.0'
     implementation project(path: ':spotify-app-remote')
     testImplementation 'junit:junit:4.13'
@@ -87,7 +85,7 @@ dependencies {
 
     // room
     implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
     kapt "android.arch.persistence.room:compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
 
