--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,34 +40,23 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    //android
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
-    implementation 'androidx.navigation:navigation-fragment:2.3.0'
-    implementation project(path: ':spotify-app-remote')
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
-
+    //kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
 
-    // ws
-    implementation 'com.neovisionaries:nv-websocket-client:2.9'
-
-    // retrofit + gson
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-
-    // rx
-    implementation "io.reactivex.rxjava2:rxjava:$rxjava2_version"
-    implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
-    implementation "io.reactivex.rxjava2:rxkotlin:2.4.0"
+    //android-design
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.navigation:navigation-fragment:2.3.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    implementation "com.android.support:design:$support_version"
+    implementation "com.google.android.material:material:1.2.0"
 
     // dagger 2
     implementation "com.google.dagger:dagger:$dagger2_version"
@@ -76,19 +65,20 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$dagger2_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger2_version"
 
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-
-    implementation "com.android.support:design:$support_version"
-    implementation "com.google.android.material:material:1.2.0"
-
+    //spotift-sdk
     implementation project(':spotify-app-remote')
 
-    // room
+    //gson
+    implementation 'com.google.code.gson:gson:2.8.6'
+
+    //room
     implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     kapt "android.arch.persistence.room:compiler:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
 
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-
+    //test
+    androidTestImplementation 'junit:junit:4.13'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
