--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
         buildConfigField("String", "SPOTIFY_CLIENT_ID", properties['SPOTIFY_CLIENT_ID'])
         buildConfigField("String", "SPOTIFY_REDIRECT_URI", properties['SPOTIFY_REDIRECT_URI'])
         buildConfigField("String", "DEFAULT_PLAYLIST", properties['DEFAULT_PLAYLIST'])
+        buildConfigField("String", "SPOTIFY_API_BASE", properties['SPOTIFY_API_BASE'])
     }
 
     buildTypes {
@@ -37,6 +38,10 @@ android {
     }
 
     buildFeatures.viewBinding = true
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+    }
 }
 
 dependencies {
@@ -67,6 +72,7 @@ dependencies {
 
     //spotift-sdk
     implementation project(':spotify-app-remote')
+    implementation project(':spotify-auth')
 
     //gson
     implementation 'com.google.code.gson:gson:2.8.6'
@@ -77,8 +83,22 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     kapt "android.arch.persistence.room:compiler:$room_version"
 
+    //retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+
     //test
-    androidTestImplementation 'junit:junit:4.13'
+    implementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+    implementation 'com.beust:klaxon:5.0.1'
+
+    implementation "se.michaelthelin.spotify:spotify-web-api-java:6.3.0"
+
 }
