--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,36 +49,49 @@ android {
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
     }
+
+    sourceSets {
+        main.res.srcDirs += [
+                'src/main/res/layouts',
+                'src/main/res/layouts/alarm',
+                'src/main/res/layouts/alarmlog',
+                'src/main/res/layouts/main',
+                'src/main/res/layouts/notifications',
+                'src/main/res/layouts/playlists',
+                'src/main/res/layouts/tracklist',
+        ]
+    }
 }
 
 dependencies {
     //android
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.core:core-ktx:1.3.2'
 
     //kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
 
     //android-design
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation 'androidx.navigation:navigation-fragment:2.3.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'androidx.navigation:navigation-fragment:2.3.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation "com.android.support:design:$support_version"
-    implementation "com.google.android.material:material:1.2.0"
+    implementation "com.google.android.material:material:1.2.1"
 
-    // dagger 2
+    //dagger 2
     implementation "com.google.dagger:dagger:$dagger2_version"
     implementation "com.google.dagger:dagger-android:$dagger2_version"
     implementation "com.google.dagger:dagger-android-support:$dagger2_version"
     kapt "com.google.dagger:dagger-compiler:$dagger2_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger2_version"
 
-    //spotift-sdk
+    //spotify-sdk
     implementation project(':spotify-app-remote')
     implementation project(':spotify-auth')
 
@@ -104,9 +117,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    //http
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+
+    //json
     implementation 'com.beust:klaxon:5.0.1'
 
+    //spotify-api
     implementation "se.michaelthelin.spotify:spotify-web-api-java:6.3.0"
 
 }
