--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
-        android:name="ru.nikstep.alarm.AlarmApp"
+        android:name=".AlarmApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -16,7 +16,7 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
-            android:name="ru.nikstep.alarm.ui.main.MainActivity"
+            android:name=".ui.main.MainActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
             <intent-filter>
@@ -48,13 +48,12 @@
             android:name=".ui.settings.SettingsActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
-
         <activity
             android:name="com.spotify.sdk.android.auth.LoginActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
         <receiver
-            android:name="ru.nikstep.alarm.service.alarm.android.AlarmReceiver"
+            android:name=".service.alarm.android.AlarmReceiver"
             android:enabled="true"
             android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
             <intent-filter>
@@ -62,7 +61,12 @@
             </intent-filter>
         </receiver>
 
+        <receiver
+            android:name=".service.alarm.android.reminder.AlarmReminderReceiver"
+            android:enabled="true"></receiver>
+
         <service android:name=".service.alarm.android.AlarmService" />
+        <service android:name=".service.alarm.android.reminder.AlarmReminderService" />
         <service android:name=".service.alarm.android.RescheduleAlarmsService" />
         <service android:name=".service.alarm.android.StopAlarmService" />
     </application>
